k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: todo
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
